--- a/themes/default/partials/site/headerevent.htm
+++ b/themes/default/partials/site/headerevent.htm
@@ -30,6 +30,6 @@
   </div>
   <div class="feature"><img src="{{preurl}}/storage/app/media/uploaded-files/templates/location.svg" class="fr-fil fr-dib">
 
-    <p class="feature-txt">{{event[0].location}}</p><a class="feature-txt-mapa" href="{{event.locationgoogle}}" target="_blank">Ver mapa</a></div>
+    <p class="feature-txt">{{event[0].location}}</p><a class="feature-txt-mapa" href="{{event[0].locationgoogle}}" target="_blank">Ver mapa</a></div>
 </div>
 
