--- a/themes/default/layouts/ruta.htm
+++ b/themes/default/layouts/ruta.htm
@@ -37,6 +37,8 @@ code = "redes-sociales"
 
         $this['urlPage'] = $this->page->url;
 
+        $this['ruta'] = $this->staticApp->rutaFindByUrl($this->page->url);
+
         if($this->page->apiBag){
             if(isset($this->page->apiBag["staticPage"]->attributes["viewBag"]["cover"])){
                 $this['metaImg'] = $this->page->apiBag["staticPage"]->attributes["viewBag"]["cover"];
