--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -111,6 +111,8 @@
 
     .languages {
       visibility: hidden;
+      font-size: 18px !important;
+      line-height: 31px !important;
     }
 
     .show-lang {
