--- a/themes/default/partials/allevents.htm
+++ b/themes/default/partials/allevents.htm
@@ -62,7 +62,7 @@
 			<img class="separator" src="{{preurl}}/storage/app/media/uploaded-files/templates/big-yellow-separator.svg">
 	</div>
 	<div class="all-events-container">
-		 {% for i in 6..events|length %}
+		 {% for i in 6..(events|length -1) %}
   	    <!--  MÁS POPULARES -->
           <div class="event">
             <div class="overlay-img"></div>
