--- a/themes/default/partials/allrutas.htm
+++ b/themes/default/partials/allrutas.htm
@@ -62,7 +62,7 @@
 	</div>
 	<div class="all-events-container">
 		
-       {% for i in 6..rutas|length %}
+       {% for i in 6..(rutas|length -1) %}
   	     
         <!--  MÁS POPULARES -->
           <div class="event">
