--- a/themes/default/partials/allrutas.htm
+++ b/themes/default/partials/allrutas.htm
@@ -29,7 +29,7 @@
         <!--  MÁS POPULARES -->
           <div class="event">
             <div class="overlay-img"></div>
-            <img class="rec-img" src="{{ruta.viewBag.cover}}">
+            <img class="rec-img" src="{{rutas[i].viewBag.cover}}">
             <div class="txt-container">
               <p class="name">{{rutas[i].viewBag.title}}</p>
               <img class="separator" src="{{preurl}}/storage/app/media/uploaded-files/templates/small-yellow-separator.svg">
@@ -67,7 +67,7 @@
         <!--  MÁS POPULARES -->
           <div class="event">
             <div class="overlay-img"></div>
-            <img class="rec-img" src="{{ruta.viewBag.cover}}">
+            <img class="rec-img" src="{{rutas[i].viewBag.cover}}">
             <div class="txt-container">
               <p class="name">{{rutas[i].viewBag.title}}</p>
               <img class="separator" src="{{preurl}}/storage/app/media/uploaded-files/templates/small-yellow-separator.svg">
