--- a/modules/backend/layouts/_head.htm
+++ b/modules/backend/layouts/_head.htm
@@ -12,8 +12,8 @@
 <link rel="apple-touch-icon" sizes="180x180" href="{{url('/')}}/plugins/rainlab/pages/assets/img/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="{{url('/')}}/plugins/rainlab/pages/assets/img/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="{{url('/')}}/plugins/rainlab/pages/assets/img/favicons/favicon-16x16.png">
-    
-<title>Cádiz Sudo</title>
+
+<title>Cádiz Turismo | Sudo</title>
 <?php
     $coreBuild = System\Models\Parameter::get('system::core.build', 1);
 ?>
