--- a/themes/default/layouts/prensa.htm
+++ b/themes/default/layouts/prensa.htm
@@ -77,11 +77,11 @@ code = "redes-sociales"
 
     {% component 'staticPage' %}
 
-    <div id='prtlNews' class="all-events">
+    <!-- <div id='prtlNews' class="all-events">
         <div class="all-events-container">
         {% partial "news" %}
         </div>
-    </div>
+    </div> -->
 
     {% partial 'site/footer' %}
 
