--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -1649,6 +1649,7 @@ html, body {
   -ms-grid-template-columns: repeat(3, 400px);
   grid-row-gap: 30px;
   -ms-grid-row-gap: 30px;
+  margin-bottom: 90px;
   .publicacion {
     border-bottom: 1px solid #CECECE;
     min-height: 525px;
