--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -1918,6 +1918,13 @@ html, body {
   }
 }
 
+#container-sala-prensa {
+  margin: 0px auto;
+  padding: 40px 0px 90px 0px;
+
+}
+
+
 #out-features {
   top: 820px;
   .feature {
