--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -1921,9 +1921,11 @@ html, body {
 #container-sala-prensa {
   margin: 0px auto;
   padding: 40px 0px 90px 0px;
-
 }
 
+#prtlSearch {
+  background-color: white;
+}
 
 #out-features {
   top: 820px;
