--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -1811,6 +1811,9 @@ html, body {
   margin: 0px auto;
   padding: 40px 0px 90px 0px; }
 
+#prtlSearch {
+  background-color: white; }
+
 #out-features {
   top: 820px; }
   #out-features .feature {
