--- a/themes/default/partials/news.htm
+++ b/themes/default/partials/news.htm
@@ -30,7 +30,9 @@
 </div>
 {% else %}
 
-
+<div class="mock-space-prensa">
+	<p>Vuelve más tarde, tendremos un montón de noticias para ti.</p>
+</div>
 
 
 {% endif %}
