--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -1811,7 +1811,7 @@ html, body {
   margin: 0px auto;
   padding: 40px 0px 90px 0px; }
 
-#prtlSearch {
+.search-prensa {
   background-color: white; }
 
 .mock-space-prensa {
