--- a/plugins/rainlab/pages/assets/scss/style-event.scss
+++ b/plugins/rainlab/pages/assets/scss/style-event.scss
@@ -239,6 +239,7 @@
       font-size: 16px;
       line-height: 22px;
       margin-bottom: 0px;
+      text-transform: capitalize;
     }
 
     .feature-txt-mapa {
