--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -2653,7 +2653,8 @@ html, body {
     align-items: center !important;
     justify-content: center !important;
     text-align: center;
-    padding-top: 30px !important; }
+    //padding-top: 30px !important;
+  }
     .i-container .also-feature {
       margin: 0px auto 10px auto !important; }
       .i-container .main-feature {
