--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -2655,6 +2655,9 @@ html, body {
     text-align: center;
     //padding-top: 30px !important;
   }
+  #exps-playa + .icons-row > .i-container {
+    padding-top: 30px !important;
+  }
     .i-container .also-feature {
       margin: 0px auto 10px auto !important; }
       .i-container .main-feature {
