--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -500,7 +500,7 @@ html, body {
   margin-bottom: 0px; }
 
 .language-container a {
-  color: white; }
+  color: red; }
 
 .language-container a:hover, .language-container a:focus, .language-container a:active {
   text-decoration: none; }
