--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -552,7 +552,7 @@ html, body {
   .language-container p {
     margin-bottom: 0px; }
   .language-container a {
-    color: red; }
+    color: white; }
     .language-container a:hover, .language-container a:focus, .language-container a:active {
       text-decoration: none; }
   .language-container .active-lang {
