--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -2326,7 +2326,8 @@ html, body {
       .small-features .small-feature:last-child {
         margin-bottom: 0px !important; }
   .more-popular, .main-section-comarcas {
-    margin-top: 90px !important; }
+    //margin-top: 90px !important;
+  }
     .more-popular .title-search, .all-events .title-search, .all-exps .title-search, .main-section-comarcas .title-search {
       text-align: center;
       width: 80%; }
