--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -2391,8 +2391,7 @@ html, body {
   .header .background-image {
     top: 0px !important; }
   .header-comarcas .header-txt .txt {
-    font-size: 100px !important;
-    line-height: 385px !important; }
+    font-size: 100px !important; }
   .header-container {
     width: 100% !important; }
   .inputs-container {
