--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -2597,7 +2597,8 @@ html, body {
     }
   .header-comarcas .header-txt .txt {
     font-size: 100px !important;
-    line-height: 385px !important; }
+    //line-height: 385px !important;
+   }
   .header-container {
     width: 100% !important; }
   .inputs-container {
