--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -2177,6 +2177,9 @@ html, body {
   .con-encanto {
     font-size: 100px !important;
   }
+  .img-village {
+    height: 650px !important;
+  }
   .section-txt p, .section-txt-village p, .section-txt-comarca p {
     width: 86% !important;
   }
