--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -2824,8 +2824,7 @@ html, body {
       width: 86%; }
     .section-txt .txt-container .desc, .section-txt-village .txt-container .desc {
       font-size: 18px !important;
-      width: 86%;
-      margin: 0 auto; }
+      width: 86%; }
     .section-txt .txt-container .municipios, .section-txt-village .txt-container .municipios {
       flex-direction: column;
       align-items: center !important; }
