--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -2180,6 +2180,9 @@ html, body {
   .img-village {
     height: 650px !important;
   }
+  .featured-element {
+    height: 700px !important;
+  }
   .section-txt p, .section-txt-village p, .section-txt-comarca p {
     width: 86% !important;
   }
