--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3056,6 +3056,11 @@ html, body {
           margin-top: 80px !important;
           min-height: 570px !important;
         }
+        .main-exp .header-txt {
+          margin-bottom: 10px !important;
+          margin-top: 0px !important;
+          min-height: 570px !important;
+        }
         .send-info-container {
           height: auto !important;
           min-height: 650px !important;
