--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -47,6 +47,12 @@
 input:-webkit-autofill {
   -webkit-box-shadow: 0 0 0 30px #CECECE inset !important; }
 
+.close-modal {
+  position: absolute;
+  padding: 0px;
+  top: 20px;
+  right: 20px; }
+
 .section-txt p, .section-txt-village p, .section-txt-comarca p {
   color: #9B9B9B;
   font-size: 18px;
