--- a/themes/default/partials/site/headerexp.htm
+++ b/themes/default/partials/site/headerexp.htm
@@ -32,8 +32,8 @@
 <div id="modal-exp"> <!-- data-iziModal-fullscreen="true"  data-iziModal-title="Welcome"  data-iziModal-subtitle="Subtitle"  data-iziModal-icon="icon-home" -->
     <!-- Modal content -->
     <div class="modal-container">
-      <img data-izimodal-close="#modal-exp" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/modal-icon.svg">
-      <img class="close-modal" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/close-modal.svg">
+      <img src="{{url('/')}}/plugins/rainlab/pages/assets/svg/modal-icon.svg">
+      <img data-izimodal-close="#modal-exp" class="close-modal" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/close-modal.svg">
       <h3>{{'¿Quieres recibir esta experiencia en tu email?'|_}}</h3>
       <p>{{'Escribe tu email y en unos segundos tendrás la experiencia en tu móvil para que puedas verla siempre que quieras.'|_}}</p>
       <form id = "modalMailExperience" class="" data-request="onMailExperience">
