--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -60,7 +60,7 @@
 
   .close-modal {
     position: absolute;
-    padding-top: 0px;
+    padding-top: 0px !important;
     top: 20px;
     right: 20px;
   }
