--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -49,7 +49,7 @@ input:-webkit-autofill {
 
 .close-modal {
   position: absolute;
-  padding-top: 0px;
+  padding-top: 0px !important;
   top: 20px;
   right: 20px; }
 
