--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -2273,8 +2273,7 @@ html, body {
     max-width: 90%;
     text-align: center; }
   .header-comarcas .header-txt .txt {
-    font-size: 185px !important;
-    line-height: 385px !important; }
+    font-size: 185px !important; }
   form {
     flex-direction: column !important; }
   .header-container {
