--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -2471,7 +2471,8 @@ html, body {
   text-align: center;}
   .header-comarcas .header-txt .txt {
     font-size: 185px !important;
-    line-height: 385px !important; }
+    //line-height: 385px !important;
+  }
   form {
     flex-direction: column !important; }
   .header-container {
