--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3010,7 +3010,7 @@ html, body {
     }
     .featured-element .txt-container .desc {
       width: 80% !important;
-      margin: 0 auto;
+      //margin: 0 auto;
       text-align: left;
     }
 
