--- a/modules/system/views/mail/layout-default.htm
+++ b/modules/system/views/mail/layout-default.htm
@@ -43,7 +43,7 @@ name = "Default layout"
 
         <!-- Footer -->
         {% partial 'footer' body %}
-            &copy; {{ "now"|date("Y") }} {{ appName }}. All rights reserved.
+            &copy; {{ "now"|date("Y") }} {{ appName }}. All rights reserved.123
         {% endpartial %}
 
     </table>
