--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -2543,9 +2543,7 @@ html, body {
       width: 85%;
       margin: 0 auto; }
     .section-txt iframe {
-      width: 80%;
-      height: auto;
-      min-height: 500px; }
+      max-width: 100%;; }
   .more-content {
     flex-direction: column;
     align-items: center;
@@ -2702,9 +2700,7 @@ html, body {
       width: 85%;
       margin: 0 auto; }
     .section-txt iframe {
-      width: 80%;
-      height: auto;
-      min-height: 500px; }
+      max-width: 100%; }
   .main-section-comarcas .main-txt {
     margin: 0px auto !important;
     width: 85%; }
