--- a/plugins/rainlab/pages/assets/css/style-event.css
+++ b/plugins/rainlab/pages/assets/css/style-event.css
@@ -435,8 +435,7 @@
             outline: none;
             opacity: 0.7; }
   .section-txt iframe {
-    width: 100%;
-    height: 396px;
+    max-width: 100%;
     margin-bottom: 75px;
     margin-top: 35px; }
 
