--- a/plugins/rainlab/pages/assets/scss/style-event.scss
+++ b/plugins/rainlab/pages/assets/scss/style-event.scss
@@ -453,8 +453,7 @@
     }
   }
   iframe {
-    width: 100%;
-    height: 396px;
+    max-width: 100%;
     margin-bottom: 75px;
     margin-top: 35px;
   }
