--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -2975,6 +2975,9 @@ html, body {
       z-index: 98; } }
 
 @media (max-width: 920px) and (min-width: 601px) {
+  .section-txt p, .section-txt-village p, .section-txt-comarca p {
+    width: 86% !important;
+  }
   .header-search {
     height: auto !important;
     padding-top: 100px;
