--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -2064,7 +2064,8 @@ html, body {
   .header-parques, .header-flamenco, .header-teatro, .header-fiesta,
   .header-gourmet, .header-comida, .header-vino, .header-viaverde, .header-search, .header-rutas {
     background-position: center;
-    height: auto !important; }
+    height: auto !important;
+    background-attachment: initial !important; }
   .header-birdwatching .header-container, .header-alcornocales .header-container,
   .header-compras .header-container, .header-monumentos .header-container, .header-locales .header-container,
   .header-parques .header-container, .header-flamenco .header-container, .header-teatro .header-container, .header-fiesta .header-container,
