--- a/modules/system/views/mail/layout-free.htm
+++ b/modules/system/views/mail/layout-free.htm
@@ -20,7 +20,7 @@ name = "Free layout"
                     <!-- Email Body -->
                     <tr>
                         <td class="body" width="100%" cellpadding="0" cellspacing="0">
-                            <table class="inner-body" align="center" width="570" cellpadding="0" cellspacing="0">
+                            <table class="inner-body" style="background-color: white!important" align="center" width="570" cellpadding="0" cellspacing="0">
                                 <!-- Body content -->
                                 <tr>
                                     <td class="content-cell">
