--- a/modules/system/views/mail/layout-free.htm
+++ b/modules/system/views/mail/layout-free.htm
@@ -11,19 +11,19 @@ name = "Free layout"
 <body>
    
 
-    <table class="wrapper layout-default" width="100%" cellpadding="0" cellspacing="0">
+    <table  width="100%" cellpadding="0" cellspacing="0">
 
 
         <tr>
             <td align="center">
-                <table class="content" width="100%" cellpadding="0" cellspacing="0">
+                <table  width="100%" cellpadding="0" cellspacing="0">
                     <!-- Email Body -->
                     <tr>
                         <td class="body" width="100%" cellpadding="0" cellspacing="0">
-                            <table class="inner-body" style="background-color: white!important" align="center" width="570" cellpadding="0" cellspacing="0">
+                            <table align="center" width="570" cellpadding="0" cellspacing="0">
                                 <!-- Body content -->
                                 <tr>
-                                    <td class="content-cell">
+                                    <td>
                                         {{ content|raw }}
                                     </td>
                                 </tr>
