--- a/modules/system/views/mail/layout-free.htm
+++ b/modules/system/views/mail/layout-free.htm
@@ -2,5 +2,12 @@ name = "Free layout"
 ==
 {{ content|raw }}
 ==
+
+<style>
+    body-bg {background-color:white!important;}
+    body    {background-color:white!important;}
+    .wrapper{background-color:white!important;}
+</style>
+
 {{ content|raw }}
                                 
