--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -2632,7 +2632,7 @@ html, body {
     height: 175px !important; }
   .section-txt .big-number-container .step, .section-txt-village .big-number-container .step {
     font-size: 200px !important; }
-  .section-txt .txt-container .title, .section-txt-village .txt-container .title {
+  .section-txt .txt-container .title, .section-txt-village .txt-container .title, .section-txt .txt-container h3, .section-txt-village .txt-container h3 {
     font-size: 30px !important;
     line-height: 36px !important;
     width: 86%; }
