links mail home and help

--- a/plugins/rainlab/pages/views/mail/experience.htm
+++ b/plugins/rainlab/pages/views/mail/experience.htm
@@ -149,7 +149,9 @@ layout = "free"
                             <tr>
                                 <td align="left" valign="top">
                                     <div class="logo">
+                                        <a href="http://cadizturismo.jekyllme.com/">
                                         <img class="element0" src="http://cadizturismo.jekyllme.com/storage/app/media/uploaded-files/templates/cadiz-logo.jpg" alt="">
+                                        </a>
                                     </div>
                                 </td>
                             </tr>
@@ -162,7 +164,7 @@ layout = "free"
 
             <!-- Start Grid 2 -->
 
-            <table class="img-container" role="panel" width="600" height="353px" cellspacing="0" cellpadding="0" border="0" align="center" style="max-width:600px; width:100%; height: 353px;" bgcolor="#F6F6F6">
+            <table class="img-container" role="panel" width="600" height="353px" cellspacing="0" cellpadding="0" border="0" align="center" style="max-width:600px; width:100%; height: 353px;">
                 <tr>
                     <td class="img-td" align="center" valign="top" >
                       <img src="{{experience.cover}}"/>
@@ -218,7 +220,7 @@ layout = "free"
                                         <p style="display: inline-block;">
                                             <a href="https://www.pinterest.es/cadizturismo/"><img src="http://cadizturismo.jekyllme.com/storage/app/media/uploaded-files/templates/pinterest-icon.jpg"  alt="cadiz-pinterest"></a>
                                         </p>
-                                        <span class="ask" style="margin-bottom: 80px"> <a href="#"><b>¿Dudas o preguntas?</b></a></span>
+                                        <span class="ask" style="margin-bottom: 80px"> <a href="http://cadizturismo.jekyllme.com/es/necesitas-ayuda"><b>¿Dudas o preguntas?</b></a></span>
                                     </div>
                                 </td>
                             </tr>
