--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3292,7 +3292,9 @@ footer {
 .aviso-legal-container {
   width: auto;
   max-width: 80%;
-  margin: 170px auto 70px auto;
+  margin: 0px auto;
+  padding-top: 170px;
+  padding-bottom: 70px;
   h1 {
     color: #464646;
     border-bottom: 2px solid #464646;
