--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -2979,6 +2979,11 @@ footer {
           opacity: 0.5; }
 
 /* legal */
+.full-legal-container {
+  width: 100%;
+  height: auto;
+  background-color: #F6F6F6; }
+
 .aviso-legal-container {
   width: auto;
   max-width: 80%;
