--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3289,6 +3289,11 @@ footer {
 }
 
 /* legal */
+.full-legal-container {
+  width: 100%;
+  height: auto;
+  background-color: #F6F6F6;
+}
 .aviso-legal-container {
   width: auto;
   max-width: 80%;
